# ocaml_discovery

./: .gitignore  insertion_sort.ml  quick_sort.ml  ramsey.ml  sort_using_immutable_tree.ml  sort_using_mutable_tree.ml  tail_recursion.ml
bigint/: dune-project  notes.md
bigint/lib/: dune
bigint/test/: dune
mytest/: dune  dune-project  sum.ml  test_sample.ml
mytest/lib/: dune
ramsey/lib/: ramsey.ml
ramsey/test/: dune  test.ml
ramsey2/: dune-project
ramsey2/lib/: dune  ramsey.ml  ramsey.mli
ramsey2/test/: dune  ramsey.ml
ramsey3/: dune-project
ramsey3/lib/: ramsey.ml
ramsey3/test/: test.ml
square_of_squares/: dune-project  notes.md
square_of_squares/lib/: dune  square_of_squares.ml
square_of_squares/test/: dune  test.ml
zarith/: dune-project
zarith/lib/: dune
zarith/test/: dune
